--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -164,7 +164,6 @@ ul {
   width: 100%;
   text-align: center;
   margin: -24px auto 16px;
-  z-index: -1;
   display: flex;
   align-items: center;
   a, p {
